# pdf2imgCrop

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
pdf2imgCrop/: __init__.py  __main__.py  core.py
